Remove org.json dependency

--- a/streampipes-processors-transformation-jvm/pom.xml
+++ b/streampipes-processors-transformation-jvm/pom.xml
@@ -80,6 +80,9 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
+                        <configuration>
+                            <mainClass>org.streampipes.processors.transformation.jvm.TransformationJvmInit</mainClass>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
