--- a/pom.xml
+++ b/pom.xml
@@ -55,12 +55,25 @@
     </modules>
 
     <properties>
+        <streampipes.version>0.64.1-SNAPSHOT</streampipes.version>
+
+        <amqp-client.version>4.1.0</amqp-client.version>
+        <boofcv.version>0.33</boofcv.version>
+        <commons-math3.version>3.6.1</commons-math3.version>
         <data-generator.version>1.3.1</data-generator.version>
+        <iotdb.version>0.8.0</iotdb.version>
+        <language-detector.version>0.6</language-detector.version>
+        <log4j-to-slf4j.version>2.8.2</log4j-to-slf4j.version>
+        <mailapi.version>1.4.3</mailapi.version>
         <milo.version>2.22.1</milo.version>
+        <nekohtml.version>1.9.13</nekohtml.version>
+        <okhttp.version>3.9.0</okhttp.version>
         <opennlp.version>1.9.0</opennlp.version>
         <postgresql.version>42.2.2</postgresql.version>
         <pulsar.version>2.4.1</pulsar.version>
-        <streampipes.version>0.64.1-SNAPSHOT</streampipes.version>
+        <slack-api.version>0.5.1</slack-api.version>
+        <xerces.version>2.9.1</xerces.version>
+
         <maven-shade-plugin.version>3.0.0</maven-shade-plugin.version>
     </properties>
 
@@ -155,34 +168,29 @@
 
             <!-- External dependencies -->
             <dependency>
-                <groupId>com.mashape.unirest</groupId>
-                <artifactId>unirest-java</artifactId>
-                <version>1.4.9</version>
-            </dependency>
-            <dependency>
                 <groupId>com.optimaize.languagedetector</groupId>
                 <artifactId>language-detector</artifactId>
-                <version>0.6</version>
+                <version>${language-detector.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.rabbitmq</groupId>
                 <artifactId>amqp-client</artifactId>
-                <version>4.1.0</version>
+                <version>${amqp-client.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
-                <version>3.9.0</version>
+                <version>${okhttp.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.ullink.slack</groupId>
                 <artifactId>simpleslackapi</artifactId>
-                <version>0.5.1</version>
+                <version>${slack-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.mail</groupId>
                 <artifactId>mailapi</artifactId>
-                <version>1.4.3</version>
+                <version>${mailapi.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.acesinc.data</groupId>
@@ -192,7 +200,7 @@
             <dependency>
                 <groupId>net.sourceforge.nekohtml</groupId>
                 <artifactId>nekohtml</artifactId>
-                <version>1.9.13</version>
+                <version>${nekohtml.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
@@ -202,7 +210,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-math3</artifactId>
-                <version>3.6.1</version>
+                <version>${commons-math3.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
@@ -222,12 +230,12 @@
             <dependency>
                 <groupId>org.apache.iotdb</groupId>
                 <artifactId>iotdb-jdbc</artifactId>
-                <version>0.8.0</version>
+                <version>${iotdb.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-to-slf4j</artifactId>
-                <version>2.8.2</version>
+                <version>${log4j-to-slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.opennlp</groupId>
@@ -242,7 +250,7 @@
             <dependency>
                 <groupId>org.boofcv</groupId>
                 <artifactId>boofcv-core</artifactId>
-                <version>0.33</version>
+                <version>${boofcv.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.elasticsearch</groupId>
@@ -257,7 +265,7 @@
             <dependency>
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
-                <version>2.9.1</version>
+                <version>${xerces.version}</version>
             </dependency>
 
             <!-- Test dependencies -->
