--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <boofcv.version>0.33</boofcv.version>
         <commons-math3.version>3.6.1</commons-math3.version>
         <data-generator.version>1.3.1</data-generator.version>
+        <google-maps-services.version>0.10.0</google-maps-services.version>
         <iotdb.version>0.8.0</iotdb.version>
         <language-detector.version>0.6</language-detector.version>
         <log4j-to-slf4j.version>2.8.2</log4j-to-slf4j.version>
@@ -167,6 +168,11 @@
             </dependency>
 
             <!-- External dependencies -->
+            <dependency>
+                <groupId>com.google.maps</groupId>
+                <artifactId>google-maps-services</artifactId>
+                <version>${google-maps-services.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.optimaize.languagedetector</groupId>
                 <artifactId>language-detector</artifactId>
