ce#267 - use date time picker to select data instead of date picker

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@angular/platform-browser-dynamic": "7.2.9",
     "@angular/router": "7.2.9",
     "@angular/upgrade": "7.2.9",
-    "@ngui/datetime-picker": "^0.16.2",
+    "@ngui/datetime-picker": "0.16.2",
     "@swimlane/ngx-charts": "10.1.0",
     "@uirouter/angular-hybrid": "7.0.0",
     "angular": "1.7.7",
@@ -46,6 +46,7 @@
     "angular-material-icons": "0.4.0",
     "angular-messages": "1.7.7",
     "angular-notification-icons": "0.4.4",
+    "angular-plotly.js": "1.3.2",
     "angular-resource": "1.7.7",
     "angular-route": "1.7.7",
     "angular-rt-popup": "1.0.6",
@@ -57,7 +58,6 @@
     "angular-ui-bootstrap": "0.14.3",
     "angular-ui-sortable": "0.13.4",
     "angular-ui-tree": "2.9.0",
-    "angular-plotly.js": "1.3.2",
     "angular2-uuid": "^1.1.1",
     "angularjs-datetime-picker": "0.1.16",
     "bootstrap": "3.3.4",
@@ -73,6 +73,7 @@
     "konva": "^3.2.4",
     "lodash": "3.10.1",
     "ng-file-upload": "9.0.13",
+    "ng-pick-datetime": "7.0.0",
     "ng-prettyjson": "0.1.8",
     "ng-showdown": "^1.1.0",
     "ng-simple-slideshow": "^1.2.9",
