Fix streampipes/ce#294: Extract prism.js to core module

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "ng2-dragula": "^1.5.0",
     "ngmap": "1.18.0",
     "ngx-color-picker": "^7.5.0",
-    "prismjs": "^1.16.0",
+    "prismjs": "1.16.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "shepherd.js": "2.4.0",
