--- a/streampipes-backend/src/main/resources/shiro.ini
+++ b/streampipes-backend/src/main/resources/shiro.ini
@@ -53,6 +53,7 @@ securityManager.rememberMeManager.cookie.maxAge = 1000000000
 /api/v2/noauth/users/*/element/* = anon
 /api//v3/noauth/datalake/* = anon
 /api/v2/noauth/element/* = anon
+/api/v2/noauth/files/* = anon
 /api/v2/kpis = anon
 /api/v2/kpis/* = anon
 /api/v2/admin/login/* = anon
