--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ github:
     - git config --global user.name 'zehnder'
     - git checkout $CI_COMMIT_REF_NAME
     - git pull
-    - git remote rm github
+    #- git remote rm github
     - git remote add github https://$GITHUB_TOKEN:x-oauth-basic@github.com/streampipes/streampipes-ui.git
     - git push github $CI_COMMIT_REF_NAME
   only:
